Fix visibility icon on password page Fix popup buttons and description overflow

--- a/src/scss/partials/pages/_password.scss
+++ b/src/scss/partials/pages/_password.scss
@@ -29,6 +29,14 @@
     cursor: pointer;
     transition: .2s;
     padding: .5rem;
+
+    &:before {
+      content: $tgico-eye1;
+    }
+
+    &.eye-hidden:before {
+      content: $tgico-eye2;
+    }
     
     html.no-touch &:hover {
       color: #000;
