--- a/src/scss/partials/popups/_peer.scss
+++ b/src/scss/partials/popups/_peer.scss
@@ -27,6 +27,9 @@
       margin-bottom: 1.625rem;
       min-width: 15rem;
       max-width: fit-content;
+      text-overflow: ellipsis;
+      overflow: hidden;
+      word-break: break-word;
     }
 
     &-buttons {
